Added link to demo and github.

--- a/about.html
+++ b/about.html
@@ -30,6 +30,8 @@
  
  <p>Questions or comments? <a href="mailto:jdavid.eisenberg@gmail.com">Let me know</a>.</p>
 
+  <p><a href="https://github.com/jdeisenberg/city-chooser">Fork me on github!</a></p>
+ 
   <p>
   <a href="index.html">Return to travel helper</a>
   </p>
