Add credits for icons.

--- a/about.html
+++ b/about.html
@@ -26,6 +26,9 @@
   
   <li>The world map came from <a href="http://en.wikipedia.org/wiki/File:Worldmap_location_NED_50m.svg">Wikipedia</a>, and is in
   the public domain.</li>
+  <li>Arrow and zoom icons from <a href="http://openclipart.org">openclipart</a>
+  artists <a href="http://openclipart.org/user-detail/ben">ben</a> and
+  <a href="http://openclipart.org/user-detail/DaKo">DaKo</a>.</li>
   </ul>
  
  <p>Questions or comments? <a href="mailto:jdavid.eisenberg@gmail.com">Let me know</a>.</p>
